--- a/mongrel2.conf
+++ b/mongrel2.conf
@@ -17,12 +17,6 @@ listsurf_host = Host(
         '/media/': media_dir,
         '/': listsurf_handler})
 
-ls_host = Host(
-    name="localhost", 
-    routes={
-        '/media/': media_dir,
-        '/': listsurf_handler})
-
 listsurf_serv = Server(
     uuid="f400bf85-4538-4f7a-8908-67e313d515c2",
     access_log="/log/mongrel2.access.log",
@@ -32,7 +26,7 @@ listsurf_serv = Server(
     name="listsurf",
     pid_file="/mongrel2.pid",
     port=6767,
-    hosts = [listsurf_host, ls_host])
+    hosts = [listsurf_host])
 
 
 settings = {"zeromq.threads": 1}
