Updated requirements file

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
-Cython
-Jinja2
-gevent
-gevent-zeromq
-greenlet
-py-bcrypt
-pymongo
-python-dateutil
-pyzmq
-ujson
+Cython==0.15.1
+Jinja2==2.6
+brubeck==0.3.7
+dictshield==0.3.6
+gevent==0.13.6
+gevent-zeromq==0.2.0
+greenlet==0.3.2
+py-bcrypt==0.2
+pymongo==2.1
+python-dateutil==2.0
+pyzmq==2.1.11
+ujson==1.15
