Using 127.0.0.1 instead of localhost. ZMQ seems to be finicky with writing sockets from the VM to the mac file system, but TCP works correctly.

--- a/mongrel2.conf
+++ b/mongrel2.conf
@@ -1,7 +1,7 @@
 listsurf_handler = Handler(
-    send_spec='tcp://localhost:9999',
+    send_spec='tcp://127.0.0.1:9999',
     send_ident='34f9ceee-cd52-4b7f-b197-88bf2f0ec378',
-    recv_spec='tcp://localhost:9998', 
+    recv_spec='tcp://127.0.0.1:9998', 
     recv_ident='')
 
 
